syntax = "proto3";
option java_multiple_files = true;
package socialMediaUser;

message CreateSMUserRequest {
  string email = 1;
  string username = 2;
  string nickname = 3;
  string password = 4;
}

message UpdateSMUserRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string email = 4;
  int32 id = 5;
}

message DeleteSMUserRequest {
  int32 id = 1;
}

message SMUserEmptyResponse {

}

service SMUserService {
  rpc CreateUser (CreateSMUserRequest) returns (SMUserEmptyResponse);
  rpc UpdateSMUser (UpdateSMUserRequest) returns (SMUserEmptyResponse);
  rpc DeleteUser (DeleteSMUserRequest) returns (SMUserEmptyResponse);
}